test-crate/tests/ui-pre_1.39/abort.stderr
error: abort! 3+ args test
 --> $DIR/abort.rs:4:10
  |
4 | make_fn!(abort);
  |          ^^^^^
